$Id$

2017-11-05  Christian Franke  <franke@computer.org>

	configure.ac: Add separate version number for drivedb.h branch.

2017-11-05  Christian Franke  <franke@computer.org>

	smartmontools 6.6

2017-11-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apple SD/SM/TS...E/F/G SSDs: Rename, add 1TB
	- Innodisk 3IE3/3ME3/3ME4 SSDs: Rename, add 3ME4
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: 150GB, *G7
	  (ticket #750)
	- USB: Toshiba Canvio (0x0480:0xa202, 0xa207)
	- USB: Seagate Expansion Desktop (0x0bc2:0x3330)
	- USB: Maxtor D3 Station 3TB (0x0bc2:0x6123)
	- USB: Seagate Backup Plus 4TB (0x0bc2:0xab1e)
	- USB: JMicron (0x152d:0x0579)
	- USB: Hitachi Touro Mobile (0x4971:0x1023)
	- USB: JMicron JMS566 (0xa152:0xb566)
	- USB: LogiLink PCCloneEX Lite (0xabcd:0x6104)

	smartd.conf.5.in: Fix conditionals of platform specific samples.

	smartctl.8.in, smartd.conf.5.in: Shorten or remove info about
	very old 3ware controllers.

	smartctl.8.in: Add '-g' to '-x' documentation.
	Avoid a very long line.

	smartctl.cpp: Improve help text formatting.

2017-11-03  Christian Franke  <franke@computer.org>

	update-smart-drivedb.8.in: Update mailing list link.
	update-smart-drivedb.in: Update mailing list comment.

	utility.cpp: Silence g++ 7.1 -Wformat-truncation warning.

	atacmds.cpp, dev_areca.cpp, os_linux.cpp: Add comments to silence
	g++ 7.1 -Wimplicit-fallthrough=[1-4] warnings.

	os_linux.cpp: Fix indentation (g++ 6.3: -Wmisleading-indentation).

	nvmeprint.cpp: Print IEEE EUI-64 of namespace.

2017-10-29  Christian Franke  <franke@computer.org>

	smartctl.8.in: Add notes about SMART commands obsoleted in ACS-4.
	Remove some outdated info.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe sections
	for Darwin.

	os_win32/installer.nsi: Update links.
	Remove outdated uninstall commands.

	INSTALL: Update ./configure description and OS info.

	ataidentify.cpp, ataprint.cpp: Minor ACS-4 additions.
